mobile responsive and alignment fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,4 @@
-body {
-  font-family: "Fira Sans", Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
+body {}
 
 h1,
 h2,
@@ -14,6 +12,15 @@ h6 {
 
 body {
   font-family: "Fira Sans", Raleway, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #707070;
+  font-size: 15px;
+  line-height: 27px;
+  background-color: #fff;
+}
+
+a {
+  color: #ffb71b;
+  text-decoration: none;
 }
 
 h1,
@@ -60,7 +67,7 @@ h6 {
 
 .slide-nav-wrapper .swiper-big.swiper-button-prev,
 .slide-nav-wrapper .swiper-big.swiper-rtl .swiper-button-next {
-  left: -60px;
+  left: -40px;
   right: auto;
 }
 
@@ -166,7 +173,7 @@ header #header.header-static {
 }
 
 .text-primary {
-  color: rgb(255, 183, 27);
+  color: rgb(255, 183, 27) !important;
 }
 
 .custom-product-h4 {
@@ -265,8 +272,8 @@ header #header.header-static {
 }
 
 .custom-bwc-icons {
-  color: rgb(255, 183, 27);
-  font-size: 6rem !important;
+  /* color: rgb(255, 183, 27); */
+  /* font-size: 6rem !important; */
 }
 
 .book-with-cavago-title {
@@ -714,7 +721,7 @@ div#footer h3 {
   }
 
   .header-static .main-navigation {
-    display: none;
+    /* display: none; */
   }
 
   .topnav-wrapper {
@@ -881,7 +888,7 @@ div#footer h3 {
 
 .slide-nav-wrapper .swiper-big.swiper-button-prev,
 .slide-nav-wrapper .swiper-big.swiper-rtl .swiper-button-next {
-  left: -60px;
+  left: -40px;
   right: auto;
 }
 
@@ -986,10 +993,6 @@ header #header.header-static {
   color: rgb(255, 183, 27);
 }
 
-.text-primary {
-  color: rgb(255, 183, 27);
-}
-
 .custom-product-h4 {
   position: absolute;
   top: 30px;
@@ -1087,7 +1090,7 @@ header #header.header-static {
 
 .custom-bwc-icons {
   color: rgb(255, 183, 27);
-  font-size: 6rem !important;
+  font-size: 4rem;
 }
 
 .book-with-cavago-title {
@@ -1483,6 +1486,131 @@ div#footer h3 {
   width: 450px;
 }
 
+/* bootstrap nav*/
+.hero-section {
+  padding-top: 128px;
+}
+
+.navigation-wrapper {
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+  background: rgb(247 247 247);
+}
+
+.topnav-wrapper .main-search-input {
+  display: none;
+}
+
+.sticky-header .topnav-wrapper .main-search-input {
+  display: flex;
+}
+
+.sticky-header {
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 12px 0px;
+  transition: all .3s;
+}
+
+.navbar {
+  padding: 0;
+}
+
+.m-widget {
+  display: none;
+}
+
+.navbar .navbar-toggler {
+  padding: .25rem 0;
+}
+
+.navbar .dropdown-menu {
+
+  min-width: 12rem;
+  font-size: 14px;
+  border: 0;
+  border-radius: .25rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+}
+
+.navbar-brand {
+  display: none;
+}
+
+.navbar-nav {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.top-navigation-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 0;
+}
+
+.logo-wrapper {
+  width: 180px;
+}
+
+.nav-account {
+  align-items: center;
+  display: flex;
+}
+
+.nav-account-list {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-account-list>a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  min-width: 65px;
+}
+
+.nav-account-list>a>i {
+  width: 32px;
+  height: 33px;
+  border: 1px solid #333;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-account-list>a>span {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+
+.navbar .dropdown-toggle::after {
+  display: inline-block;
+  margin-left: 0;
+  vertical-align: .255em;
+  content: "";
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 0;
+  border-left: 0;
+}
+
+.navbar .dropdown-toggle::after {
+  content: "\f107";
+  font-family: "FontAwesome";
+  padding-left: 5px;
+  position: relative;
+  top: 5px;
+}
+
+.navbar .nav-link {
+  font-weight: 500;
+  font-size: 15px;
+  color: #2d4051;
+}
+
 @media (min-width: 1240px) {
   .container {
     width: 90%;
@@ -1491,8 +1619,9 @@ div#footer h3 {
 
 @media (min-width: 1367px) {
   .container {
-    width: 90%;
-    max-width: 1400px;
+    max-width: 100%;
+    width: 100%;
+    padding: 0 80px;
   }
 }
 
@@ -1519,7 +1648,59 @@ div#footer h3 {
   }
 }
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-width: 992px) {
+  .navbar-brand {
+    display: block;
+  }
+
+  .m-widget {
+    display: block;
+  }
+
+  .custom-header-widget.m-widget {
+    display: flex;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 15px 0;
+    border-top: 1px solid #ebebeb;
+    margin: 10px 0 4px 0px;
+  }
+
+  .navbar .dropdown-toggle::after {
+    position: absolute;
+    right: 0;
+    top: 7px;
+    font-size: 16px;
+  }
+
+  .navbar .nav-link {
+    position: relative;
+  }
+
+  .navbar .dropdown-menu {
+    border: 0;
+    background: #fff;
+    box-shadow: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .navbar .dropdown-menu .dropdown-item {
+
+    padding: .25rem 0;
+  }
+
+  .navbar-nav>.nav-item {
+    border-bottom: 1px solid #e5e5e5;
+  }
+
+  .navbar-nav>.nav-item:last-child {
+    border-bottom: 0;
+  }
+
+  nav.navbar {
+    padding: .5rem 1rem;
+  }
+
   .card-main {
     position: relative;
   }
@@ -1539,12 +1720,9 @@ div#footer h3 {
     height: 38px;
   }
 
-  .header-static .main-navigation {
-    display: none;
-  }
-
   .topnav-wrapper {
     padding: 10px 0px;
+    display: none;
   }
 
   .hero-section-wrapper {
