--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("bootstrap-grid.css");
+@import url("bootstrap.min.css");
 @import url("icons.css");
 @import url("plugins/revolutionslider.css");
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700");
@@ -11626,10 +11626,6 @@ a.button.white.border:hover {
   text-align: center;
 }
 
-.centered-content .button {
-  min-width: 218px;
-}
-
 a.button.border {
   font-weight: 500;
 }
@@ -15023,6 +15019,8 @@ body .notification strong {
   transform: translate3d(0px, 0px, 0px);
   transition: transform 0.3s ease 0s;
   margin-bottom: 20px;
+  color: #333;
+  border: 1px solid #d5d5d5;
 }
 
 section.fullwidth .listing-item-container,
@@ -15066,7 +15064,7 @@ section.fullwidth .listing-item-container.list-layout,
   height: 100%;
   width: 100%;
   z-index: 9;
-  background: linear-gradient(to top, rgba(35, 35, 37, 0.9) 0%, rgba(35, 35, 37, 0.45) 35%, rgba(22, 22, 23, 0) 60%, rgba(0, 0, 0, 0) 100%) rgba(35, 35, 37, 0.2);
+  background: transparent;
   border-radius: 4px 4px 0px 0px;
   opacity: 1;
 }
